# ai-lab

./: .gitignore  README.md  contexto1.md  pyproject.toml  run_factory.py
bootstrap/: check.sh  env.example  models.sh  phase2-requirements.txt  pull_model_limited.sh  setup.sh
config/: factory.toml
docs/: architecture.md  browser-specialist.md  operations.md  phase2.md  webchat.md
factory/agents/: analyst.md  dev.md  marketing.md  orchestrator.md  research.md
factory/prompts/: build.md  marketing.md  scan.md  score.md  spec.md
src/ai_lab/: __init__.py  cli.py  config.py  models.py  pipeline.py  prompts.py  providers.py  run_store.py  shell.py  tooling.py  utils.py
tests/: test_config.py  test_pipeline.py  test_tooling.py
