[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab"
version = "0.1.0"
description = "Hybrid AI factory with Codex CLI orchestration and Ollama local workers."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Marcelo + Codex" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
